--- a/prueba_tecnica.ipynb
+++ b/prueba_tecnica.ipynb
@@ -1635,7 +1635,7 @@
     "df_items['cond'] = df_items['condition'].apply(lambda x: 1 if x else 0)\n",
     "#df_items.head()\n",
     "new_items = df_items.groupby(['seller_id', 'seller_nickname'])['cond'].sum().reset_index()\n",
-    "#Organiza por los que hacen free shipping, entre menos productos con free shipping menos apetecible\n",
+    "#Organizar por los que t\n",
     "quant_new_items = new_items.sort_values(by='cond', ascending=False)\n",
     "quant_new_items.head()"
    ]
@@ -1813,6 +1813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Join con variables generadas en la exploracion\n",
     "df1 = pd.merge(df_sellers, quant_new_items, on=['seller_id', 'seller_nickname'], how='left')\n",
     "df1 = df1.rename(columns={'cond': 'quantity_new_items'})\n",
     "final_seller_df=pd.merge(df1, top_offers_by_sellers, on=['seller_id', 'seller_nickname'], how='left')"
@@ -2220,13 +2221,10 @@
    "source": [
     "# Dividir el conjunto de datos en entrenamiento y prueba\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "# Inicializar el clasificador\n",
     "rfc = RandomForestClassifier(random_state=42)\n",
-    "\n",
     "# Entrenar el modelo\n",
     "rfc.fit(X_train, y_train)\n",
-    "\n",
     "# Realizar predicciones en el conjunto de prueba\n",
     "y_pred = rfc.predict(X_test)"
    ]
@@ -2300,10 +2298,8 @@
     "feature_importances = rfc.feature_importances_\n",
     "# Crear un DataFrame para facilitar la visualización\n",
     "importance_df = pd.DataFrame({'Feature': X.columns, 'Importance': feature_importances})\n",
-    "\n",
     "# Ordenar el DataFrame por importancia de características\n",
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
-    "\n",
     "# Crear un gráfico de barras para visualizar la importancia de las características\n",
     "plt.bar(X.columns, feature_importances)\n",
     "plt.xlabel('Características')\n",
@@ -2329,10 +2325,8 @@
    "source": [
     "# Inicializar el clasificador KNeighborsClassifier\n",
     "knn = KNeighborsClassifier()\n",
-    "\n",
     "# Entrenar el modelo\n",
     "knn.fit(X_train, y_train)\n",
-    "\n",
     "# Realizar predicciones en el conjunto de prueba\n",
     "y_pred = knn.predict(X_test)"
    ]
@@ -2429,7 +2423,6 @@
     "final_seller_df_v2 = final_seller_df\n",
     "# Separar las características (X)\n",
     "X = final_seller_df.drop(['seller_id', 'seller_nickname', 'good_profile'], axis=1)\n",
-    "\n",
     "# Estandarizar las características para que todas tengan la misma escala\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)"
@@ -2441,12 +2434,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inicializar el modelo K-Means\n",
+    "# Inicializar el modelo KMeans\n",
     "kmeans = KMeans(n_clusters=2, random_state=42)\n",
-    "\n",
     "# Ajustar el modelo a los datos\n",
     "kmeans.fit(X_scaled)\n",
-    "\n",
     "# Obtener las etiquetas de cluster asignadas a cada seller\n",
     "cluster_labels = kmeans.labels_"
    ]
@@ -2471,7 +2462,6 @@
    "source": [
     "# Agregar las etiquetas de cluster al DataFrame original\n",
     "final_seller_df_v2['cluster_label'] = cluster_labels\n",
-    "\n",
     "# Visualizar la distribución de los sellers en los clusters\n",
     "print(final_seller_df_v2.groupby('cluster_label')['good_profile'].value_counts())"
    ]
@@ -2482,7 +2472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Puedes ajustar las etiquetas de cluster según la proporción de 'good_profile' en cada cluster\n",
+    "#Ajuste de etiquetas\n",
     "final_seller_df_v2['predicted_good_profile'] = final_seller_df_v2['cluster_label'].map({0: True, 1: False})"
    ]
   },
