--- a/prueba_tecnica.ipynb
+++ b/prueba_tecnica.ipynb
@@ -283,10 +283,8 @@
     "cat_id = 'MCO1276'\n",
     "total_results = 1000\n",
     "offs = 10\n",
-    "\n",
     "# DF para los items\n",
     "df_items = pd.DataFrame()\n",
-    "\n",
     "# Iterando sobre los offsets\n",
     "for offset in range(0, total_results, offs):\n",
     "    url = f'https://api.mercadolibre.com/sites/MCO/search?category={cat_id}&offset={offset}'\n",
@@ -1635,7 +1633,7 @@
     "df_items['cond'] = df_items['condition'].apply(lambda x: 1 if x else 0)\n",
     "#df_items.head()\n",
     "new_items = df_items.groupby(['seller_id', 'seller_nickname'])['cond'].sum().reset_index()\n",
-    "#Organizar por los que t\n",
+    "#Organizar por los que tienen mas items nuevos\n",
     "quant_new_items = new_items.sort_values(by='cond', ascending=False)\n",
     "quant_new_items.head()"
    ]
